Styles: avoid tooltip clipping past edge of document

--- a/assets/scss/common/_glossary.scss
+++ b/assets/scss/common/_glossary.scss
@@ -13,8 +13,9 @@
   color: white;
   text-align: center;
   position: absolute;
-  transform: translateY(-100%);
-  width: 250px;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  min-width: 150px;
   padding: 10px;
   border-radius: 10px;
   opacity: 0;
